Shooting, PowerUps, Code Quality, Clean-Up, FileIO Template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="game_over">GAME OVER!!!!</string>
     <string name="restart">(press to restart)</string>
     <string name="longest_traveled">"Longest Distance: "</string>
+    <string name="ammo">Ammo:</string>
 </resources>
