space_shooter done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="delete">Delete</string>
     <string name="saved_scores">Saved Scores</string>
     <string name="scores">Scores</string>
+    <string name="time">"Time: "</string>
+    <string name="coinsCollected">"Coins: "</string>
 </resources>
